# rust-cpuid

./: .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: coverage.yml  standard.yml
examples/: cache.rs  cpu.rs  serialize_deserialize.rs  synthetic.rs  topology.rs  tsc_frequency.rs
src/: bitflags.rs  cpuid.c  display.rs  dump.rs  extended.rs  lib.rs  tests.rs  uarch.rs
src/tests/: i5_3337u.rs  mod.rs  ryzen_matisse.rs  xeon_gold_6252.rs
tests/: no_std_build.rs
