[package]
name = "raw-cpuid"
version = "7.0.3"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
build = "build.rs"

description = "A library to parse the x86 CPUID instruction, written in rust with no external dependencies. The implementation closely resembles the Intel CPUID manual description. The library does only depend on libcore."
homepage = "https://github.com/gz/rust-cpuid"
repository = "https://github.com/gz/rust-cpuid"
documentation = "https://docs.rs/raw-cpuid/"

readme = "README.md"
keywords = ["cpuid", "x86", "amd64", "os", "libcore"]
license = "MIT"

[[bin]]
name = "cpuid"
path = "src/bin/cpuid.rs"

[features]
use_arch = []
nightly = []
serialize = ["serde", "serde_derive"]

[dependencies]
bitflags = "1.1"
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = {version = "1.0", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { version = "0.2", default-features = false }
core_affinity = "0.5.9"

[build-dependencies]
rustc_version = "0.2"
cc = "1"