[package]
name = "raw-cpuid"
version = "9.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"

description = "A library to parse the x86 CPUID instruction, written in rust with no external dependencies. The implementation closely resembles the Intel CPUID manual description. The library does only depend on libcore."
homepage = "https://github.com/gz/rust-cpuid"
repository = "https://github.com/gz/rust-cpuid"
documentation = "https://docs.rs/raw-cpuid/"

readme = "README.md"
keywords = ["cpuid", "x86", "amd64", "os", "libcore"]
license = "MIT"
exclude = ["/ci"]

[[bin]]
name = "cpuid"
path = "src/bin/cpuid.rs"

[features]
serialize = ["serde", "serde_derive"]

[dependencies]
bitflags = "1.2"
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = {version = "1.0", optional = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { version = "0.2", default-features = false }
core_affinity = "0.5.10"
rustversion = "1.0"
phf = { version = "0.9", features = ["macros"] }